--- a/css/c-programming.css
+++ b/css/c-programming.css
@@ -69,9 +69,9 @@ p{
     min-width: 300px;
 }
 .col-2 img{
-    max-width: 80%;
+    max-width: 40%;
     padding: 50px 0;
-    margin: 0 10%;
+    margin: -40px 25%;
     border-radius: 117px; 
 }
 
@@ -186,6 +186,9 @@ p{
 }	
 .faq dt, .faq dd {
     padding-left: 50px;
+}
+.faq a{
+    color: red;
 }
 
 .hackerrank{
@@ -305,12 +308,15 @@ small{
 @media only screen and (max-width: 680px){
     nav ul{
         position:absolute;
-        top: 87px;
+        top: 65px;
         left: 0;
         background: #555;
         width:100%;
         overflow: hidden;
         transition: max-height 0.5s;
+    }
+    .navbar{
+        padding: 4px 6px;
     }
     nav ul li{
         display: block;
