--- a/css/c-programming.css
+++ b/css/c-programming.css
@@ -81,14 +81,6 @@ p{
     margin: 25px 0;
 }
 
-.btn{
-    display: inline-block;
-    background: #ff523b;
-    color: #fff;
-    padding: 8px 30px;
-    margin: 30px 0;
-    border-radius: 30px;
-}
 .navbar{
     background: radial-gradient(#fff,#ffd6d6);
 }
@@ -156,7 +148,14 @@ p{
     transform: translateY(5px);
 }
 
-
+.btn{
+    display: inline-block;
+    background: #ff523b;
+    /* color: #fff; */
+    padding: 8px 30px;
+    margin: 30px 0;
+    border-radius: 30px;
+}
 /* hackerrank */
 
 .col-5{
@@ -170,18 +169,19 @@ p{
 }
 .faq dt {
     position: relative;
-    font: bold 20px Georgia;
+    font: bold 23px Georgia;
     padding: 4px 0 10px 0;
 }
 .faq dt:before {
     content: counter(my-badass-counter);
     counter-increment: my-badass-counter;
     position: absolute;
-    left: 0;
-    top: 0;
-    font: bold 50px/1 Sans-Serif;
+    left: -8px;
+    top: 3px;
+    font: bold 38px/1 Sans-Serif;
 }
 .faq dd {
+    font-size: 14px;
     margin: 0 0 50px 0;
 }	
 .faq dt, .faq dd {
